# gsl-rs

./: .gitignore  .taurignore  Cargo.toml  README.md  dummy-server.sh  justfile
.cargo/: config.toml
src/: main.rs
src-cli/: Cargo.toml
src-cli/src/: cli.rs  main.rs
src-client/: Cargo.toml  tauri.conf.json
src-client-backend/: Cargo.toml
src-client-backend/src/: main.rs
src-client/src/: client.rs  config.rs  data.rs  main.rs
src-client/ui/: connected.html  fresh-install.html  htmx-middleware.js  index.html
src-game-wrapper/: Cargo.toml
src-game-wrapper/src/: game_wrapper.rs  main.rs
src-server/: Cargo.toml
src-server/src/: main.rs  server.rs
src-server/templates/: startup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/ui/: index.html
templates/: index.html
