# [package]
# name = "gsl"
# version = "0.1.0"
# version.workspace = true

[workspace]
resolver = "2"
members = ["src-tauri", "src-client-backend", "src-server", "src-cli"]
# default-members = ["src-client-backend"]

# [workspace.package]
# version = "0.1.0"
# authors = ["Noah May <noahmouse2011@gmail.com>"]
# edition = "2021"
# license = "MIT"
# rust-version = "1.60"
# publish = false

# [[bin]]
# name = "server"
# path = "./src-server/src/main.rs"
