[package]
name = "cli"
description = "The cli utility to mange the gsl server with high privileges from the host"
default-run = "cli"
version = "0.1.0"
authors = ["Noah May <noahmouse2011@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.60"
publish = false
# version.workspace = true
# authors.worksversion.workspace = true
# edition.worksversion.workspace = true
# license.worksversion.workspace = true
# rust-version.workspace = true
# publish.worksversion.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
