[package]
name = "cli"
description = "The cli utility to mange the gsl server with high privileges from the host"
default-run = "cli"
version = "0.1.0"
authors = ["Noah May <noahmouse2011@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.75"
publish = false

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
