[package]
name = "client-backend"
description = "The backend of the client where most of the client logic is"
default-run = "client-backend"

version = "0.1.0"
authors = ["Noah May <noahmouse2011@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.60"
publish = false

# version.workspace = true
# authors.worksversion.workspace = true
# edition.worksversion.workspace = true
# license.worksversion.workspace = true
# rust-version.workspace = true
# publish.worksversion.workspace = true

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
dylib = "0.0.3"
