[package]
name = "gsl-game-wrapper"
description = "A simple process wrapper around every game server to handle interactions"
default-run = "gsl-game-wrapper"
version = "0.1.0"
authors = ["Noah May <noahmouse2011@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.75"
publish = false

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
nix = { version = "0.28.0", features = ["signal"] }
ctrlc = "3.4.2"
