[package]
name = "server"
description = "The gsl server that runs the game servers"
default-run = "server"
version = "0.1.0"
authors = ["Noah May <noahmouse2011@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.60"
publish = false
# version.workspace = true
# authors.worksversion.workspace = true
# edition.worksversion.workspace = true
# license.worksversion.workspace = true
# rust-version.workspace = true
# publish.worksversion.workspace = true

[dependencies]
